# leptos-hotkeys

examples/demo/: Cargo.toml
examples/demo/src/: app.rs
examples/ssr-demo/: Cargo.toml
examples/ssr-demo/src/: app.rs  error_template.rs  errors.rs  lib.rs
leptos_hotkeys/: Cargo.toml
leptos_hotkeys/src/: context.rs  macros.rs  use_hotkeys.rs
