[package]
name = "leptos_hotkeys"
version = "0.2.2"
edition = "2021"
description = "A library that declaratively pairs keybindings with callbacks for Leptos applications."
license = "MIT"
repository = "https://github.com/gaucho-labs/leptos-hotkeys"
readme = "../README.md"
authors = ["Matthew Kim", "Álvaro Mondéjar Rubio", "Robert Junkins", "Zak Stucke"]
keywords = ["leptos", "hotkeys", "wasm"]

[dependencies]
leptos = "0.7.4"
log = { version = "0.4.25", optional = true }
wasm-bindgen.workspace = true
web-sys.workspace = true
send_wrapper = "0.6.0"

[features]
debug = ["dep:log"]
ssr = []
use_key = []