[package]
name = "demo"
version = "0.1.0"
edition = "2021"

[dependencies]
leptos = { version = "0.7.4", features = ["csr", "nightly"] }
console_error_panic_hook = "0.1.7"
console_log = "1.0.0"
copy_dir = "0.1.3"
leptos_meta = "0.7.4"
leptos_router = { version = "0.7.4" }
leptos_router_macro = { version = "0.7.4" }
log = "0.4.25"
leptos_hotkeys = { path = "../../leptos_hotkeys", features = [
    "debug",
    "use_key",
] }
